# socks

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/socks4/: main.rs
examples/socks4_tokio/: main.rs
examples/socks5/: main.rs
src/: lib.rs  request.rs  response.rs  v4.rs
src/common/: connection.rs  mod.rs  relay.rs
src/v4/: client.rs  mod.rs  server.rs  socks.rs
src/v5/: client.rs  mod.rs  server.rs  socks.rs
