[package]
name = "socks"
description = "SOCKS proxy server library"
keywords = ["socks", "proxy", "server", "std", "async", "tokio", "smol"]
authors = ["Henry Barreto <contato@henrybarreto.dev>"]
repository = "https://github.com/henrybarreto/socks"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
version = "0.0.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
log = "0.4.22"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "net",
  "io-util",
  "macros",
] }
