[package]
name = "socks"
description = "SOCKS proxy server library"
keywords = ["socks", "proxy", "server", "std", "async", "tokio", "smol"]
authors = ["Henry Barreto <contato@henrybarreto.dev>"]
repository = "https://github.com/henrybarreto/socks"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "io-util",
    "macros",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
